Closed
Bug 116577
Opened 24 years ago
Closed 24 years ago
debug reflow access to Element(-1)
Categories
(Core :: Layout, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: bernd_mozilla, Assigned: bernd_mozilla)
Details
Attachments
(1 file)
1.12 KB,
patch
|
jesup
:
review+
attinasi
:
superreview+
|
Details | Diff | Splinter Review |
with the change from bug 96108 the debugging facilities introduced by bug 103925
can not be used anymore. It asserts and crashes.
Comment 2•24 years ago
|
||
Comment on attachment 62633 [details] [diff] [review]
patch
r=rjesup@wgate.com
You can do the patch as stated, or if time isn't critical here you can use
SafeElementAt().
Attachment #62633 -
Flags: review+
Comment 3•24 years ago
|
||
Comment on attachment 62633 [details] [diff] [review]
patch
sr=attinasi
Attachment #62633 -
Flags: superreview+
its fixed
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•