bug 116577 avoid debug reflow access to Element(-1) r=jesup sr=attinasi